# opaque_ke_uniffi

./: .conform.yaml  .dockerignore  .gitignore  .mise.toml  CODEOWNERS  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  REUSE.toml  uniffi.toml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
src/: client_login.rs  client_registration.rs  common.rs  hash2curve.rs  lib.rs  server.rs  server_login.rs  server_registration.rs  tests.rs
